# kitten

./: .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  settings.py
routes/: default.py  kittens.py
